force-app/logging/objects/CoreLibs_LogEvent__e/CoreLibs_LogEvent__e.object-meta.xml
<CustomObject>
    <description>Platform event that is emitted for any and all logging via the core logging library.</description>
    <label>Log Event</label>
    <pluralLabel>Log Events</pluralLabel>
</CustomObject>