force-app/logging/objects/CoreLibs_LogEvent__e/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>The details of the log as JSON.</description>
    <inlineHelpText>The details of the log as JSON.</inlineHelpText>
    <label>Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>