force-app/logging/objects/CoreLibs_LogEvent__e/fields/RunningUser__c.field-meta.xml
<CustomField>
    <fullName>RunningUser__c</fullName>
    <description>The user executing the transaction in which the log was generated.</description>
    <inlineHelpText>The user executing the transaction in which the log was generated.</inlineHelpText>
    <label>Running User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>