force-app/logging/objects/CoreLibs_LogEvent__e/fields/SessionId__c.field-meta.xml
<CustomField>
    <fullName>SessionId__c</fullName>
    <description>The session Id for the user that executed the transaction in which the log was generated.</description>
    <inlineHelpText>The session Id for the user that executed the transaction in which the log was generated.</inlineHelpText>
    <label>Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>