force-app/logging/objects/CoreLibs_LogEvent__e/fields/TransactionId__c.field-meta.xml
<CustomField>
    <fullName>TransactionId__c</fullName>
    <description>The UUID generated for the transaction in which this log was generated.</description>
    <inlineHelpText>The UUID generated for the transaction in which this log was generated.</inlineHelpText>
    <label>Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>