force-app/logging/objects/CoreLibs_LogEvent__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of log e.g. ERROR, WARN, INFO.</description>
    <inlineHelpText>The type of log e.g. ERROR, WARN, INFO.</inlineHelpText>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>